fix white space and change header tags to mui syntax"

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,11 +6,27 @@ h1 {
   margin-top: 10px;
 }
 
+.banner {
+  padding-top: 5px;
+}
+
+.station-container {
+  margin: 20% 0 0 0;
+}
+
+p {
+  margin: 3em 0 0 0 ;
+}
+
 .station {
   border-bottom: 1px solid #DDD;
   width: 75%;
   margin: 0 auto;
   padding-bottom: 5px;
+}
+
+.station-name {
+  margin: 1em;
 }
 
 .back-button {
